application/couchdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: couchdb
spec:
  parentRefs:
    - name: home-gateway
      namespace: gateway-system
  hostnames:
    - obsidian-sync.home.lan
  rules:
    - backendRefs:
        - name: couchdb-couchdb
          port: 5984
